# Sentiment-analysis-backend-

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  init.sql  pyproject.toml  requirements.txt
.github/workflows/: main.yml
app/: main.py
app/auth/: token_auth.py
app/core/: config.py
app/database/: database.py  db_connection.py
app/routes/: get_data.py  getdata_router.py  login_router.py  register_router.py  sentiment_router.py
app/schemas/: SentimentRequest.py  user_schema.py
app/services/: huggingface_service.py
tests/: test_auth.py  test_sentiment.py
